@startuml

card CLI [
    <<external library>>
	 PolicyModels
]

package LibServiceApp #DDDDDD{

	package HttpHandlers{
		class LoadModelHandler  {
 		}

		class CreateNewLocalizationhandler   {
		}

		class UpdateLocalizationHandler  {
		}

		class VisualizePSHandler  {
		}

		class VisualizeDGHandler  {
		}

		class NewModelHandler  {
		}
	}

	class Server {
		+{static} main(String[] args)
		+{static} activeServer(): int
	}

	package Services {
		class PolicyModelService {}

	}

}


 Services -- CLI


Server *-- LoadModelHandler
Server *-- UpdateLocalizationHandler
Server *-- CreateNewLocalizationhandler
Server *-- VisualizePSHandler
Server *-- NewModelHandler
Server *-- VisualizeDGHandler

CreateNewLocalizationhandler --> PolicyModelService: uses
UpdateLocalizationHandler --> PolicyModelService: uses
VisualizePSHandler --> PolicyModelService: uses
LoadModelHandler --> PolicyModelService: uses
NewModelHandler --> PolicyModelService: uses
VisualizeDGHandler --> PolicyModelService: uses



@enduml